--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
   <h1 class="header">Is your Birthday Lucky?</h1>
   <main class="container">
-  <label for="date-of-birth" ></label>
-  <input type="date" id=" date-of-birth" placeholder="none" />
+  <label for="date-of-birth" >Date Of Birth:</label>
+  <input type="date" id=" date-of-birth"  />
   <label for="lucky-number" >Lucky Number</label>
-  <input type="text" id="lucky-number"  placeholder="Enter a Nimber"/>
+  <input type="text" id="lucky-number"  placeholder="Enter a Number"/>
  <button id="check-number" >Check Number</button>
+ <p id="output-container" ></p>
   </main>
+  <script src="/index.js" type="text/javascript"></script>
  </body>
 </html>
