--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
  <button id="check-number" >Check Number</button>
  <p id="output-container" ></p>
   </main>
-  <script src="/index.js" type="text/javascript"></script>
+  <script src="./index.js" ></script>
  </body>
 </html>
