--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 </head>
 <body>
   <h1 class="header">Is your Birthday Lucky?</h1>
-  <main class="container">
-  <label for="date-of-birth" >Date Of Birth:</label>
+  <!-- <main class="">
+ 
   <input type="date" id=" date-of-birth"  />
   <label for="lucky-number" >Lucky Number</label>
   <input type="text" id="lucky-number"  placeholder="Enter a Number"/>
  <button id="check-number" >Check Number</button>
  <p id="output-container" ></p>
-  </main>
+  </main> -->
+  <div class="container">
+    <label for="date-of-birth" >Date Of Birth:</label>
+    <input type="date" id="date-of-birth" />
+    <label for="lucky-number" >Lucky Number</label>
+    <input id="lucky-number" type="number" >
+    <button id="check-button" >Check Number</button>
+    <div id ="output-box"></div>
+  
+  </div>
+
   <script src="./index.js" ></script>
  </body>
 </html>
